--- a/Freetime_Planner/Freetime_Planner.csproj
+++ b/Freetime_Planner/Freetime_Planner.csproj
@@ -5,6 +5,7 @@
     <RuntimeIdentifiers>win10-x64;win10-x86;ubuntu.18.04-x64;linux-x64</RuntimeIdentifiers>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="RestSharp" Version="106.11.7" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.0" />
     <PackageReference Include="VkNet" Version="1.57.0" />
   </ItemGroup>
